<resources>
    <string name="app_name">ES</string>

    <string name="bottom_menu_item_1">首页</string>
    <string name="bottom_menu_item_2">商城</string>
    <string name="bottom_menu_item_3">抽奖</string>
    <string name="bottom_menu_item_4">夺宝</string>
    <string name="bottom_menu_item_5">抢钱</string>
    <string name="app_intro">引导</string>
    <string name="phone">请输入手机号</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_code">请输入验证码</string>
    <string name="get_code">获取</string>
    <string name="input_password">请输入密码</string>
    <string name="register">注　　　　册</string>
    <string name="login">登　　　　陆</string>
    <string name="repeat_password">请确认密码</string>
    <string name="confirm">确　　　　认</string>
    <string name="points">积分</string>
    <string name="M">M币+积分</string>
    <string name="mygifts">我抢到的</string>
    <string name="histroygifts">历史抢钱</string>
    <string name="mygoods">我的商品</string>
    <string name="mytickets">我的代金券</string>
    <string name="mybeans">我的欢乐豆</string>
    <string name="MB">M币</string>
    <string name="month_back">当月返还</string>
    <string name="myorder">我的订单</string>
    <string name="myrecommend">我推荐的人</string>
    <string name="myM">我的M币</string>
    <string name="mypoint">我的积分</string>
    <string name="level">会员等级</string>
    <string name="bank">我的银行卡</string>
    <string name="myrecommender">我的推荐人</string>
    <string name="myback">我的返还</string>
    <string name="mytreasure">我的夺宝</string>
    <string name="myaddr">送货地址</string>
    <string name="sign">签到</string>
    <string name="forget">忘记密码</string>
    <string name="head_pic">头像</string>
    <string name="username">会员名</string>
    <string name="id">ID号</string>
    <string name="input_username">请输入会员名</string>
    <string name="version">当前版本</string>
    <string name="update">在线升级</string>
    <string name="logout">退出当前账号</string>
    <string name="password">密码</string>
    <string name="change_password">修改密码</string>
    <string name="input_old">请输入原密码</string>
    <string name="input_new">请输入新密码</string>
    <string name="input_repeat">请重复新密码</string>
    <string name="card_owner">持卡人</string>
    <string name="input_name">请输入姓名</string>
    <string name="bank_type">银行</string>
    <string name="card_num">卡号</string>
    <string name="input_bank">请输入银行</string>
    <string name="input_num">请输入卡号</string>
    <string name="addr_name">收货人</string>
    <string name="addr_phone">联系电话</string>
    <string name="addr_district">所在地区</string>
    <string name="input_district">请输入所在地区</string>
    <string name="addr_detail">详细地址</string>
    <string name="input_detail">请输入详细地址</string>
    <string name="input_recommender">请输入推荐人ID</string>
    <string name="change_recommender_tips">注意:在购买会员后，无法再修改您的推荐人</string>
    <string name="MB_FREEZE">冻结M币</string>
    <string name="share">推广二维码</string>
    <string name="choose_bank">选择银行</string>
    <string name="card_bank">开户行</string>
    <string name="input_bank_addr">请填写办理开户手续的营业网点</string>
    <string name="input_upper">请输入上级ID</string>
</resources>
