<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">
    <so.len.duobao.customView.TopMenuBar
        android:id="@+id/tmb_activity_add_addr"
        style="@style/topMenuBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </so.len.duobao.customView.TopMenuBar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|left"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/addr_name"
            android:textSize="@dimen/edittext_size"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/et_name_activity_add_addr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:background="@null"
            android:hint="@string/input_name"
            android:singleLine="true"
            android:textSize="@dimen/edittext_size"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|left"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/addr_phone"
            android:textSize="@dimen/edittext_size"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/et_phone_activity_add_addr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:background="@null"
            android:hint="@string/input_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:textSize="@dimen/edittext_size"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|left"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/addr_district"
            android:textSize="@dimen/edittext_size"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/et_district_activity_add_addr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:background="@null"
            android:hint="@string/input_district"
            android:singleLine="true"
            android:textSize="@dimen/edittext_size"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|left"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/addr_detail"
            android:textSize="@dimen/edittext_size"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/et_detail_activity_add_addr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:background="@null"
            android:hint="@string/input_detail"
            android:singleLine="true"
            android:textSize="@dimen/edittext_size"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/darker_gray"/>


</LinearLayout>