<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">
    <so.len.duobao.customView.TopMenuBar
        android:id="@+id/tmb_activity_add_card"
        style="@style/topMenuBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </so.len.duobao.customView.TopMenuBar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|left"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/card_owner"
            android:textSize="@dimen/edittext_size"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/et_owner_activity_add_card"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:background="@null"
            android:hint="@string/input_name"
            android:singleLine="true"
            android:textSize="@dimen/edittext_size"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/darker_gray"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|left"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/bank_type"
            android:textSize="@dimen/edittext_size"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/op_bank_activity_add_card"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:text="@string/choose_bank"
            android:gravity="center_vertical"
            android:inputType="number"
            android:maxLength="6"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:singleLine="true"
            android:textSize="@dimen/edittext_size"
            android:textColor="@color/black"/>

        <!--<Spinner-->
            <!--android:id="@+id/sp_bank_activity_add_card"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="8"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:background="@null"-->
            <!--android:hint=""-->
            <!--android:inputType="number"-->
            <!--android:maxLength="6"-->
            <!--android:paddingTop="@dimen/dp_10"-->
            <!--android:paddingBottom="@dimen/dp_10"-->
            <!--android:singleLine="true"-->
            <!--android:textSize="@dimen/edittext_size" />-->

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/darker_gray"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|left"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/card_num"
            android:textSize="@dimen/edittext_size"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/et_num_activity_add_card"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:background="@null"
            android:hint="@string/input_num"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="@dimen/edittext_size"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/darker_gray"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|left"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/card_bank"
            android:textSize="@dimen/edittext_size"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/et_addr_activity_add_card"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:background="@null"
            android:hint="@string/input_bank_addr"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="@dimen/edittext_size"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/darker_gray"/>

</LinearLayout>