<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <so.len.duobao.customView.TopMenuBar
        android:id="@+id/tmb_activity_register"
        style="@style/topMenuBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </so.len.duobao.customView.TopMenuBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/phone"/>
        <EditText
            android:id="@+id/et_activity_register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:background="@null"
            android:hint="@string/input_phone"
            android:textSize="@dimen/edittext_size"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/code"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_activity_register_getcode"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_alignParentRight="true"
                android:text="@string/get_code"
                android:textSize="@dimen/dp_12"
                android:textColor="@color/theme"
                android:background="@drawable/shape_btn"/>
            <EditText
                android:id="@+id/et_activity_register_code"
                android:layout_toLeftOf="@id/btn_activity_register_getcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:background="@null"
                android:hint="@string/input_code"
                android:textSize="@dimen/edittext_size"
                android:inputType="number"
                android:maxLength="6"
                android:singleLine="true" />
        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/password"/>
        <EditText
            android:id="@+id/et_activity_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:background="@null"
            android:hint="@string/input_password"
            android:textSize="@dimen/edittext_size"
            android:inputType="textPassword"
            android:singleLine="true" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@color/darker_gray"/>

    <Button
        android:id="@+id/btn_activity_register_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/register"
        android:textColor="@color/theme"
        android:textSize="@dimen/dp_18"
        android:background="@drawable/shape_btn"/>

</LinearLayout>